horizontal scroll caused by footer fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2429,6 +2429,7 @@ footer
 */
 footer {
   background: #F4F8FB;
+  width: 99%;
   /*padding-top: 70px;*/
 }
 
